--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "files.associations": {"*.code":"cpp","system_error":"cpp","cerrno":"cpp"}
+    "files.associations": {"*.code":"cpp","system_error":"cpp","cerrno":"cpp","*.list":"cpp"}
 }
