--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,864 @@
 *.udb
 *.o
 *.swp
+
+accel/kvm/trace.c
+accel/kvm/trace.c-timestamp
+accel/kvm/trace.d
+accel/kvm/trace.h
+accel/kvm/trace.h-timestamp
+accel/tcg/trace.c
+accel/tcg/trace.c-timestamp
+accel/tcg/trace.d
+accel/tcg/trace.h
+accel/tcg/trace.h-timestamp
+arm-linux-user-config-devices.mak.d
+arm-linux-user/accel/
+arm-linux-user/config-devices.mak
+arm-linux-user/disas.d
+arm-linux-user/exec.d
+arm-linux-user/fpu/
+arm-linux-user/gdbstub-xml.c
+arm-linux-user/gdbstub-xml.d
+arm-linux-user/gdbstub.d
+arm-linux-user/linux-user/
+arm-linux-user/qemu-arm
+arm-linux-user/target/
+arm-linux-user/tcg/
+arm-linux-user/thunk.d
+arm-linux-user/trace/control-target.d
+arm-linux-user/trace/generated-helpers.d
+audio/trace.c
+audio/trace.c-timestamp
+audio/trace.d
+audio/trace.h
+audio/trace.h-timestamp
+block.d
+block/accounting.d
+block/backup.d
+block/blkdebug.d
+block/blklogwrites.d
+block/blkreplay.d
+block/blkverify.d
+block/block-backend.d
+block/bochs.d
+block/cloop.d
+block/commit.d
+block/copy-on-read.d
+block/create.d
+block/crypto.d
+block/dirty-bitmap.d
+block/dmg.d
+block/file-posix.d
+block/io.d
+block/mirror.d
+block/nbd-client.d
+block/nbd.d
+block/null.d
+block/nvme.d
+block/parallels.d
+block/qapi.d
+block/qcow.d
+block/qcow2-bitmap.d
+block/qcow2-cache.d
+block/qcow2-cluster.d
+block/qcow2-refcount.d
+block/qcow2-snapshot.d
+block/qcow2.d
+block/qed-check.d
+block/qed-cluster.d
+block/qed-l2-cache.d
+block/qed-table.d
+block/qed.d
+block/quorum.d
+block/raw-format.d
+block/replication.d
+block/sheepdog.d
+block/snapshot.d
+block/throttle-groups.d
+block/throttle.d
+block/trace.c
+block/trace.c-timestamp
+block/trace.d
+block/trace.h
+block/trace.h-timestamp
+block/vdi.d
+block/vhdx-endian.d
+block/vhdx-log.d
+block/vhdx.d
+block/vmdk.d
+block/vpc.d
+block/vvfat.d
+block/write-threshold.d
+blockjob.d
+chardev/char-fd.d
+chardev/char-fe.d
+chardev/char-file.d
+chardev/char-io.d
+chardev/char-mux.d
+chardev/char-null.d
+chardev/char-parallel.d
+chardev/char-pipe.d
+chardev/char-pty.d
+chardev/char-ringbuf.d
+chardev/char-serial.d
+chardev/char-socket.d
+chardev/char-stdio.d
+chardev/char-udp.d
+chardev/char.d
+chardev/trace.c
+chardev/trace.c-timestamp
+chardev/trace.d
+chardev/trace.h
+chardev/trace.h-timestamp
+config-all-devices.mak
+config-host.h
+config-host.h-timestamp
+contrib/ivshmem-client/ivshmem-client.d
+contrib/ivshmem-client/main.d
+contrib/ivshmem-server/ivshmem-server.d
+contrib/ivshmem-server/main.d
+cpus-common.d
+crypto/aes.d
+crypto/afsplit.d
+crypto/block-luks.d
+crypto/block-qcow.d
+crypto/block.d
+crypto/cipher.d
+crypto/desrfb.d
+crypto/hash-glib.d
+crypto/hash.d
+crypto/hmac-glib.d
+crypto/hmac.d
+crypto/init.d
+crypto/ivgen-essiv.d
+crypto/ivgen-plain.d
+crypto/ivgen-plain64.d
+crypto/ivgen.d
+crypto/pbkdf-stub.d
+crypto/pbkdf.d
+crypto/random-platform.d
+crypto/secret.d
+crypto/tlscreds.d
+crypto/tlscredsanon.d
+crypto/tlscredspsk.d
+crypto/tlscredsx509.d
+crypto/tlssession.d
+crypto/trace.c
+crypto/trace.c-timestamp
+crypto/trace.d
+crypto/trace.h
+crypto/trace.h-timestamp
+crypto/xts.d
+disas/arm-a64.d
+disas/arm.d
+disas/i386.d
+disas/libvixl/vixl/a64/decoder-a64.d
+disas/libvixl/vixl/a64/disasm-a64.d
+disas/libvixl/vixl/a64/instructions-a64.d
+disas/libvixl/vixl/compiler-intrinsics.d
+disas/libvixl/vixl/utils.d
+hw/9pfs/trace.c
+hw/9pfs/trace.c-timestamp
+hw/9pfs/trace.d
+hw/9pfs/trace.h
+hw/9pfs/trace.h-timestamp
+hw/acpi/trace.c
+hw/acpi/trace.c-timestamp
+hw/acpi/trace.d
+hw/acpi/trace.h
+hw/acpi/trace.h-timestamp
+hw/alpha/trace.c
+hw/alpha/trace.c-timestamp
+hw/alpha/trace.d
+hw/alpha/trace.h
+hw/alpha/trace.h-timestamp
+hw/arm/trace.c
+hw/arm/trace.c-timestamp
+hw/arm/trace.d
+hw/arm/trace.h
+hw/arm/trace.h-timestamp
+hw/audio/trace.c
+hw/audio/trace.c-timestamp
+hw/audio/trace.d
+hw/audio/trace.h
+hw/audio/trace.h-timestamp
+hw/block/dataplane/trace.c
+hw/block/dataplane/trace.c-timestamp
+hw/block/dataplane/trace.d
+hw/block/dataplane/trace.h
+hw/block/dataplane/trace.h-timestamp
+hw/block/trace.c
+hw/block/trace.c-timestamp
+hw/block/trace.d
+hw/block/trace.h
+hw/block/trace.h-timestamp
+hw/char/trace.c
+hw/char/trace.c-timestamp
+hw/char/trace.d
+hw/char/trace.h
+hw/char/trace.h-timestamp
+hw/core/bus.d
+hw/core/hotplug.d
+hw/core/irq.d
+hw/core/qdev-properties.d
+hw/core/qdev.d
+hw/core/reset.d
+hw/display/trace.c
+hw/display/trace.c-timestamp
+hw/display/trace.d
+hw/display/trace.h
+hw/display/trace.h-timestamp
+hw/dma/trace.c
+hw/dma/trace.c-timestamp
+hw/dma/trace.d
+hw/dma/trace.h
+hw/dma/trace.h-timestamp
+hw/hppa/trace.c
+hw/hppa/trace.c-timestamp
+hw/hppa/trace.d
+hw/hppa/trace.h
+hw/hppa/trace.h-timestamp
+hw/i2c/trace.c
+hw/i2c/trace.c-timestamp
+hw/i2c/trace.d
+hw/i2c/trace.h
+hw/i2c/trace.h-timestamp
+hw/i386/trace.c
+hw/i386/trace.c-timestamp
+hw/i386/trace.d
+hw/i386/trace.h
+hw/i386/trace.h-timestamp
+hw/i386/xen/trace.c
+hw/i386/xen/trace.c-timestamp
+hw/i386/xen/trace.d
+hw/i386/xen/trace.h
+hw/i386/xen/trace.h-timestamp
+hw/ide/trace.c
+hw/ide/trace.c-timestamp
+hw/ide/trace.d
+hw/ide/trace.h
+hw/ide/trace.h-timestamp
+hw/input/trace.c
+hw/input/trace.c-timestamp
+hw/input/trace.d
+hw/input/trace.h
+hw/input/trace.h-timestamp
+hw/intc/trace.c
+hw/intc/trace.c-timestamp
+hw/intc/trace.d
+hw/intc/trace.h
+hw/intc/trace.h-timestamp
+hw/isa/trace.c
+hw/isa/trace.c-timestamp
+hw/isa/trace.d
+hw/isa/trace.h
+hw/isa/trace.h-timestamp
+hw/mem/trace.c
+hw/mem/trace.c-timestamp
+hw/mem/trace.d
+hw/mem/trace.h
+hw/mem/trace.h-timestamp
+hw/misc/macio/trace.c
+hw/misc/macio/trace.c-timestamp
+hw/misc/macio/trace.d
+hw/misc/macio/trace.h
+hw/misc/macio/trace.h-timestamp
+hw/misc/trace.c
+hw/misc/trace.c-timestamp
+hw/misc/trace.d
+hw/misc/trace.h
+hw/misc/trace.h-timestamp
+hw/net/trace.c
+hw/net/trace.c-timestamp
+hw/net/trace.d
+hw/net/trace.h
+hw/net/trace.h-timestamp
+hw/nvram/trace.c
+hw/nvram/trace.c-timestamp
+hw/nvram/trace.d
+hw/nvram/trace.h
+hw/nvram/trace.h-timestamp
+hw/pci-host/trace.c
+hw/pci-host/trace.c-timestamp
+hw/pci-host/trace.d
+hw/pci-host/trace.h
+hw/pci-host/trace.h-timestamp
+hw/pci/trace.c
+hw/pci/trace.c-timestamp
+hw/pci/trace.d
+hw/pci/trace.h
+hw/pci/trace.h-timestamp
+hw/ppc/trace.c
+hw/ppc/trace.c-timestamp
+hw/ppc/trace.d
+hw/ppc/trace.h
+hw/ppc/trace.h-timestamp
+hw/rdma/trace.c
+hw/rdma/trace.c-timestamp
+hw/rdma/trace.d
+hw/rdma/trace.h
+hw/rdma/trace.h-timestamp
+hw/rdma/vmw/trace.c
+hw/rdma/vmw/trace.c-timestamp
+hw/rdma/vmw/trace.d
+hw/rdma/vmw/trace.h
+hw/rdma/vmw/trace.h-timestamp
+hw/s390x/trace.c
+hw/s390x/trace.c-timestamp
+hw/s390x/trace.d
+hw/s390x/trace.h
+hw/s390x/trace.h-timestamp
+hw/scsi/trace.c
+hw/scsi/trace.c-timestamp
+hw/scsi/trace.d
+hw/scsi/trace.h
+hw/scsi/trace.h-timestamp
+hw/sd/trace.c
+hw/sd/trace.c-timestamp
+hw/sd/trace.d
+hw/sd/trace.h
+hw/sd/trace.h-timestamp
+hw/sparc/trace.c
+hw/sparc/trace.c-timestamp
+hw/sparc/trace.d
+hw/sparc/trace.h
+hw/sparc/trace.h-timestamp
+hw/sparc64/trace.c
+hw/sparc64/trace.c-timestamp
+hw/sparc64/trace.d
+hw/sparc64/trace.h
+hw/sparc64/trace.h-timestamp
+hw/timer/trace.c
+hw/timer/trace.c-timestamp
+hw/timer/trace.d
+hw/timer/trace.h
+hw/timer/trace.h-timestamp
+hw/tpm/trace.c
+hw/tpm/trace.c-timestamp
+hw/tpm/trace.d
+hw/tpm/trace.h
+hw/tpm/trace.h-timestamp
+hw/usb/trace.c
+hw/usb/trace.c-timestamp
+hw/usb/trace.d
+hw/usb/trace.h
+hw/usb/trace.h-timestamp
+hw/vfio/trace.c
+hw/vfio/trace.c-timestamp
+hw/vfio/trace.d
+hw/vfio/trace.h
+hw/vfio/trace.h-timestamp
+hw/virtio/trace.c
+hw/virtio/trace.c-timestamp
+hw/virtio/trace.d
+hw/virtio/trace.h
+hw/virtio/trace.h-timestamp
+hw/xen/trace.c
+hw/xen/trace.c-timestamp
+hw/xen/trace.d
+hw/xen/trace.h
+hw/xen/trace.h-timestamp
+io/channel-buffer.d
+io/channel-command.d
+io/channel-file.d
+io/channel-socket.d
+io/channel-tls.d
+io/channel-util.d
+io/channel-watch.d
+io/channel-websock.d
+io/channel.d
+io/dns-resolver.d
+io/net-listener.d
+io/task.d
+io/trace.c
+io/trace.c-timestamp
+io/trace.d
+io/trace.h
+io/trace.h-timestamp
+ivshmem-client
+ivshmem-server
+job.d
+libqemuutil.a
+linux-user/trace.c
+linux-user/trace.c-timestamp
+linux-user/trace.d
+linux-user/trace.h
+linux-user/trace.h-timestamp
+migration/trace.c
+migration/trace.c-timestamp
+migration/trace.d
+migration/trace.h
+migration/trace.h-timestamp
+module_block.h
+nbd/client.d
+nbd/common.d
+nbd/server.d
+nbd/trace.c
+nbd/trace.c-timestamp
+nbd/trace.d
+nbd/trace.h
+nbd/trace.h-timestamp
+net/trace.c
+net/trace.c-timestamp
+net/trace.d
+net/trace.h
+net/trace.h-timestamp
+qapi-gen-timestamp
+qapi/opts-visitor.d
+qapi/qapi-builtin-types.c
+qapi/qapi-builtin-types.d
+qapi/qapi-builtin-types.h
+qapi/qapi-builtin-visit.c
+qapi/qapi-builtin-visit.d
+qapi/qapi-builtin-visit.h
+qapi/qapi-clone-visitor.d
+qapi/qapi-commands-block-core.c
+qapi/qapi-commands-block-core.h
+qapi/qapi-commands-block.c
+qapi/qapi-commands-block.h
+qapi/qapi-commands-char.c
+qapi/qapi-commands-char.h
+qapi/qapi-commands-common.c
+qapi/qapi-commands-common.h
+qapi/qapi-commands-crypto.c
+qapi/qapi-commands-crypto.h
+qapi/qapi-commands-introspect.c
+qapi/qapi-commands-introspect.h
+qapi/qapi-commands-job.c
+qapi/qapi-commands-job.h
+qapi/qapi-commands-migration.c
+qapi/qapi-commands-migration.h
+qapi/qapi-commands-misc.c
+qapi/qapi-commands-misc.h
+qapi/qapi-commands-net.c
+qapi/qapi-commands-net.h
+qapi/qapi-commands-rocker.c
+qapi/qapi-commands-rocker.h
+qapi/qapi-commands-run-state.c
+qapi/qapi-commands-run-state.h
+qapi/qapi-commands-sockets.c
+qapi/qapi-commands-sockets.h
+qapi/qapi-commands-tpm.c
+qapi/qapi-commands-tpm.h
+qapi/qapi-commands-trace.c
+qapi/qapi-commands-trace.h
+qapi/qapi-commands-transaction.c
+qapi/qapi-commands-transaction.h
+qapi/qapi-commands-ui.c
+qapi/qapi-commands-ui.h
+qapi/qapi-commands.c
+qapi/qapi-commands.h
+qapi/qapi-dealloc-visitor.d
+qapi/qapi-doc.texi
+qapi/qapi-events-block-core.c
+qapi/qapi-events-block-core.d
+qapi/qapi-events-block-core.h
+qapi/qapi-events-block.c
+qapi/qapi-events-block.d
+qapi/qapi-events-block.h
+qapi/qapi-events-char.c
+qapi/qapi-events-char.d
+qapi/qapi-events-char.h
+qapi/qapi-events-common.c
+qapi/qapi-events-common.d
+qapi/qapi-events-common.h
+qapi/qapi-events-crypto.c
+qapi/qapi-events-crypto.d
+qapi/qapi-events-crypto.h
+qapi/qapi-events-introspect.c
+qapi/qapi-events-introspect.d
+qapi/qapi-events-introspect.h
+qapi/qapi-events-job.c
+qapi/qapi-events-job.d
+qapi/qapi-events-job.h
+qapi/qapi-events-migration.c
+qapi/qapi-events-migration.d
+qapi/qapi-events-migration.h
+qapi/qapi-events-misc.c
+qapi/qapi-events-misc.d
+qapi/qapi-events-misc.h
+qapi/qapi-events-net.c
+qapi/qapi-events-net.d
+qapi/qapi-events-net.h
+qapi/qapi-events-rocker.c
+qapi/qapi-events-rocker.d
+qapi/qapi-events-rocker.h
+qapi/qapi-events-run-state.c
+qapi/qapi-events-run-state.d
+qapi/qapi-events-run-state.h
+qapi/qapi-events-sockets.c
+qapi/qapi-events-sockets.d
+qapi/qapi-events-sockets.h
+qapi/qapi-events-tpm.c
+qapi/qapi-events-tpm.d
+qapi/qapi-events-tpm.h
+qapi/qapi-events-trace.c
+qapi/qapi-events-trace.d
+qapi/qapi-events-trace.h
+qapi/qapi-events-transaction.c
+qapi/qapi-events-transaction.d
+qapi/qapi-events-transaction.h
+qapi/qapi-events-ui.c
+qapi/qapi-events-ui.d
+qapi/qapi-events-ui.h
+qapi/qapi-events.c
+qapi/qapi-events.d
+qapi/qapi-events.h
+qapi/qapi-introspect.c
+qapi/qapi-introspect.d
+qapi/qapi-introspect.h
+qapi/qapi-types-block-core.c
+qapi/qapi-types-block-core.d
+qapi/qapi-types-block-core.h
+qapi/qapi-types-block.c
+qapi/qapi-types-block.d
+qapi/qapi-types-block.h
+qapi/qapi-types-char.c
+qapi/qapi-types-char.d
+qapi/qapi-types-char.h
+qapi/qapi-types-common.c
+qapi/qapi-types-common.d
+qapi/qapi-types-common.h
+qapi/qapi-types-crypto.c
+qapi/qapi-types-crypto.d
+qapi/qapi-types-crypto.h
+qapi/qapi-types-introspect.c
+qapi/qapi-types-introspect.d
+qapi/qapi-types-introspect.h
+qapi/qapi-types-job.c
+qapi/qapi-types-job.d
+qapi/qapi-types-job.h
+qapi/qapi-types-migration.c
+qapi/qapi-types-migration.d
+qapi/qapi-types-migration.h
+qapi/qapi-types-misc.c
+qapi/qapi-types-misc.d
+qapi/qapi-types-misc.h
+qapi/qapi-types-net.c
+qapi/qapi-types-net.d
+qapi/qapi-types-net.h
+qapi/qapi-types-rocker.c
+qapi/qapi-types-rocker.d
+qapi/qapi-types-rocker.h
+qapi/qapi-types-run-state.c
+qapi/qapi-types-run-state.d
+qapi/qapi-types-run-state.h
+qapi/qapi-types-sockets.c
+qapi/qapi-types-sockets.d
+qapi/qapi-types-sockets.h
+qapi/qapi-types-tpm.c
+qapi/qapi-types-tpm.d
+qapi/qapi-types-tpm.h
+qapi/qapi-types-trace.c
+qapi/qapi-types-trace.d
+qapi/qapi-types-trace.h
+qapi/qapi-types-transaction.c
+qapi/qapi-types-transaction.d
+qapi/qapi-types-transaction.h
+qapi/qapi-types-ui.c
+qapi/qapi-types-ui.d
+qapi/qapi-types-ui.h
+qapi/qapi-types.c
+qapi/qapi-types.d
+qapi/qapi-types.h
+qapi/qapi-util.d
+qapi/qapi-visit-block-core.c
+qapi/qapi-visit-block-core.d
+qapi/qapi-visit-block-core.h
+qapi/qapi-visit-block.c
+qapi/qapi-visit-block.d
+qapi/qapi-visit-block.h
+qapi/qapi-visit-char.c
+qapi/qapi-visit-char.d
+qapi/qapi-visit-char.h
+qapi/qapi-visit-common.c
+qapi/qapi-visit-common.d
+qapi/qapi-visit-common.h
+qapi/qapi-visit-core.d
+qapi/qapi-visit-crypto.c
+qapi/qapi-visit-crypto.d
+qapi/qapi-visit-crypto.h
+qapi/qapi-visit-introspect.c
+qapi/qapi-visit-introspect.d
+qapi/qapi-visit-introspect.h
+qapi/qapi-visit-job.c
+qapi/qapi-visit-job.d
+qapi/qapi-visit-job.h
+qapi/qapi-visit-migration.c
+qapi/qapi-visit-migration.d
+qapi/qapi-visit-migration.h
+qapi/qapi-visit-misc.c
+qapi/qapi-visit-misc.d
+qapi/qapi-visit-misc.h
+qapi/qapi-visit-net.c
+qapi/qapi-visit-net.d
+qapi/qapi-visit-net.h
+qapi/qapi-visit-rocker.c
+qapi/qapi-visit-rocker.d
+qapi/qapi-visit-rocker.h
+qapi/qapi-visit-run-state.c
+qapi/qapi-visit-run-state.d
+qapi/qapi-visit-run-state.h
+qapi/qapi-visit-sockets.c
+qapi/qapi-visit-sockets.d
+qapi/qapi-visit-sockets.h
+qapi/qapi-visit-tpm.c
+qapi/qapi-visit-tpm.d
+qapi/qapi-visit-tpm.h
+qapi/qapi-visit-trace.c
+qapi/qapi-visit-trace.d
+qapi/qapi-visit-trace.h
+qapi/qapi-visit-transaction.c
+qapi/qapi-visit-transaction.d
+qapi/qapi-visit-transaction.h
+qapi/qapi-visit-ui.c
+qapi/qapi-visit-ui.d
+qapi/qapi-visit-ui.h
+qapi/qapi-visit.c
+qapi/qapi-visit.d
+qapi/qapi-visit.h
+qapi/qmp-dispatch.d
+qapi/qmp-event.d
+qapi/qmp-registry.d
+qapi/qobject-input-visitor.d
+qapi/qobject-output-visitor.d
+qapi/string-input-visitor.d
+qapi/string-output-visitor.d
+qapi/trace.c
+qapi/trace.c-timestamp
+qapi/trace.d
+qapi/trace.h
+qapi/trace.h-timestamp
+qemu-ga
+qemu-img
+qemu-img-cmds.h
+qemu-img.d
+qemu-io
+qemu-io-cmds.d
+qemu-io.d
+qemu-nbd
+qemu-nbd.d
+qemu-options.def
+qemu-version.h
+qga/channel-posix.d
+qga/commands-posix.d
+qga/commands.d
+qga/guest-agent-command-state.d
+qga/main.d
+qga/qapi-generated/
+qobject/block-qdict.d
+qobject/json-lexer.d
+qobject/json-parser.d
+qobject/json-streamer.d
+qobject/qbool.d
+qobject/qdict.d
+qobject/qjson.d
+qobject/qlist.d
+qobject/qlit.d
+qobject/qnull.d
+qobject/qnum.d
+qobject/qobject.d
+qobject/qstring.d
+qom/container.d
+qom/cpu.d
+qom/object.d
+qom/object_interfaces.d
+qom/qom-qobject.d
+qom/trace.c
+qom/trace.c-timestamp
+qom/trace.d
+qom/trace.h
+qom/trace.h-timestamp
+replication.d
+scsi/pr-manager-helper.d
+scsi/pr-manager.d
+scsi/trace.c
+scsi/trace.c-timestamp
+scsi/trace.d
+scsi/trace.h
+scsi/trace.h-timestamp
+scsi/utils.d
+stubs/arch-query-cpu-def.d
+stubs/arch-query-cpu-model-baseline.d
+stubs/arch-query-cpu-model-comparison.d
+stubs/arch-query-cpu-model-expansion.d
+stubs/bdrv-next-monitor-owned.d
+stubs/blk-commit-all.d
+stubs/blockdev-close-all-bdrv-states.d
+stubs/change-state-handler.d
+stubs/clock-warp.d
+stubs/cpu-get-clock.d
+stubs/cpu-get-icount.d
+stubs/dump.d
+stubs/error-printf.d
+stubs/fdset.d
+stubs/gdbstub.d
+stubs/get-vm-name.d
+stubs/iothread-lock.d
+stubs/iothread.d
+stubs/is-daemonized.d
+stubs/machine-init-done.d
+stubs/migr-blocker.d
+stubs/monitor.d
+stubs/notify-event.d
+stubs/pc_madt_cpu_entry.d
+stubs/pci-host-piix.d
+stubs/qmp_memory_device.d
+stubs/qtest.d
+stubs/ram-block.d
+stubs/replay.d
+stubs/runstate-check.d
+stubs/set-fd-handler.d
+stubs/slirp.d
+stubs/sysbus.d
+stubs/target-get-monitor-def.d
+stubs/target-monitor-defs.d
+stubs/tpm.d
+stubs/trace-control.d
+stubs/uuid.d
+stubs/vm-stop.d
+stubs/vmgenid.d
+stubs/vmstate.d
+stubs/xen-common.d
+stubs/xen-hvm.d
+target/arm/trace.c
+target/arm/trace.c-timestamp
+target/arm/trace.d
+target/arm/trace.h
+target/arm/trace.h-timestamp
+target/i386/trace.c
+target/i386/trace.c-timestamp
+target/i386/trace.d
+target/i386/trace.h
+target/i386/trace.h-timestamp
+target/mips/trace.c
+target/mips/trace.c-timestamp
+target/mips/trace.d
+target/mips/trace.h
+target/mips/trace.h-timestamp
+target/ppc/trace.c
+target/ppc/trace.c-timestamp
+target/ppc/trace.d
+target/ppc/trace.h
+target/ppc/trace.h-timestamp
+target/s390x/trace.c
+target/s390x/trace.c-timestamp
+target/s390x/trace.d
+target/s390x/trace.h
+target/s390x/trace.h-timestamp
+target/sparc/trace.c
+target/sparc/trace.c-timestamp
+target/sparc/trace.d
+target/sparc/trace.h
+target/sparc/trace.h-timestamp
+temp.txt
+trace-events-all
+trace-root.c
+trace-root.c-timestamp
+trace-root.d
+trace-root.h
+trace-root.h-timestamp
+trace/control.d
+trace/generated-helpers-wrappers.h
+trace/generated-helpers-wrappers.h-timestamp
+trace/generated-helpers.c
+trace/generated-helpers.c-timestamp
+trace/generated-helpers.h
+trace/generated-helpers.h-timestamp
+trace/generated-tcg-tracers.h
+trace/generated-tcg-tracers.h-timestamp
+trace/qmp.d
+ui/input-keymap-atset1-to-qcode.c
+ui/input-keymap-linux-to-qcode.c
+ui/input-keymap-osx-to-qcode.c
+ui/input-keymap-qcode-to-atset1.c
+ui/input-keymap-qcode-to-atset2.c
+ui/input-keymap-qcode-to-atset3.c
+ui/input-keymap-qcode-to-linux.c
+ui/input-keymap-qcode-to-qnum.c
+ui/input-keymap-qcode-to-sun.c
+ui/input-keymap-qnum-to-qcode.c
+ui/input-keymap-usb-to-qcode.c
+ui/input-keymap-win32-to-qcode.c
+ui/input-keymap-x11-to-qcode.c
+ui/input-keymap-xorgevdev-to-qcode.c
+ui/input-keymap-xorgkbd-to-qcode.c
+ui/input-keymap-xorgxquartz-to-qcode.c
+ui/input-keymap-xorgxwin-to-qcode.c
+ui/trace.c
+ui/trace.c-timestamp
+ui/trace.d
+ui/trace.h
+ui/trace.h-timestamp
+util/acl.d
+util/aio-posix.d
+util/aio-wait.d
+util/aiocb.d
+util/async.d
+util/base64.d
+util/bitmap.d
+util/bitops.d
+util/buffer.d
+util/bufferiszero.d
+util/cacheinfo.d
+util/compatfd.d
+util/coroutine-ucontext.d
+util/crc32c.d
+util/cutils.d
+util/envlist.d
+util/error.d
+util/event_notifier-posix.d
+util/fifo8.d
+util/getauxval.d
+util/hbitmap.d
+util/hexdump.d
+util/host-utils.d
+util/id.d
+util/iohandler.d
+util/iov.d
+util/iova-tree.d
+util/keyval.d
+util/lockcnt.d
+util/log.d
+util/main-loop.d
+util/memfd.d
+util/mmap-alloc.d
+util/module.d
+util/notify.d
+util/osdep.d
+util/oslib-posix.d
+util/pagesize.d
+util/path.d
+util/qdist.d
+util/qemu-config.d
+util/qemu-coroutine-io.d
+util/qemu-coroutine-lock.d
+util/qemu-coroutine-sleep.d
+util/qemu-coroutine.d
+util/qemu-error.d
+util/qemu-openpty.d
+util/qemu-option.d
+util/qemu-progress.d
+util/qemu-sockets.d
+util/qemu-thread-posix.d
+util/qemu-timer-common.d
+util/qemu-timer.d
+util/qht.d
+util/range.d
+util/rcu.d
+util/readline.d
+util/stats64.d
+util/systemd.d
+util/thread-pool.d
+util/throttle.d
+util/timed-average.d
+util/trace.c
+util/trace.c-timestamp
+util/trace.d
+util/trace.h
+util/trace.h-timestamp
+util/unicode.d
+util/uri.d
+util/uuid.d
+util/vfio-helpers.d
