--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "files.associations": {"*.code":"cpp","system_error":"cpp","cerrno":"cpp","*.list":"cpp","array":"cpp","initializer_list":"cpp","string_view":"cpp","utility":"cpp"}
+    "files.associations": {
+        "*.code": "cpp",
+        "system_error": "cpp",
+        "cerrno": "cpp",
+        "*.list": "cpp",
+        "array": "cpp",
+        "initializer_list": "cpp",
+        "string_view": "cpp",
+        "utility": "cpp",
+        "envlist.h": "c"
+    }
 }
