New feature: now log can be turned on/off by setting qemu_log_file. Example: DQEMU --offloadmode client -d mmu [program]. This will enable DQEMU debug info.

--- a/.gitignore
+++ b/.gitignore
@@ -886,4 +886,11 @@ best_group2/
 env.sh
 thread
 thread.c
+tp/
+arm-linux-user/config-target.mak
+config-host.mak
+config.log
+config.status
+arm-linux-user/
+
 
